--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "autoprefixer": "^9.7.3",
     "css-loader": "^3.4.0",
+    "eslint": "^6.8.0",
     "exports-loader": "^0.7.0",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
