Correcting the files with eslint

--- a/.stickler.yml
+++ b/.stickler.yml
@@ -1,6 +1,8 @@
 linters:
-  csslint: {  }
+  eslint:
+    config: './.eslintrc.json'
+
 files:
   ignore:
-    - 'bower_components/*'
-    - 'node_modules/*'
+      - 'dist/*'
+      - 'src/bootstrap.min.css'
