--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Weather_JS",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Technologies",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,6 +22,8 @@
     "autoprefixer": "^9.7.3",
     "css-loader": "^3.4.0",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
     "exports-loader": "^0.7.0",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
@@ -35,5 +37,6 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0"
-  }
+  },
+  "main": "webpack.config.js"
 }
