--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "Weather_JS",
   "version": "1.0.0",
-  "description": "## Technologies",
+  "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
   "repository": {
@@ -19,6 +18,7 @@
   },
   "homepage": "https://github.com/MouhaDiouf/Weather_JS#readme",
   "devDependencies": {
+    "@types/node": "^13.7.0",
     "autoprefixer": "^9.7.3",
     "css-loader": "^3.4.0",
     "eslint": "^6.8.0",
